BrowseItems initial setup
Set up of "browse items" activity

--- a/res/layout/activity_browse_items.xml
+++ b/res/layout/activity_browse_items.xml
@@ -8,4 +8,54 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".BrowseItemsActivity" >
 
+    <Button
+        android:id="@+id/btnLeft"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="14dp"
+        android:text="@string/LeftCaption" />
+
+    <Button
+        android:id="@+id/btnRight"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btnLeft"
+        android:layout_alignBottom="@+id/btnLeft"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:text="@string/RightCaption" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btnLeft"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_launcher"
+        android:layout_above="@+id/textviewPhone"/>   
+
+    <TextView
+        android:id="@+id/textviewEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnLeft"
+        android:layout_alignLeft="@+id/btnLeft"
+        android:layout_marginBottom="15dp"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/textviewPhone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textviewEmail"
+        android:layout_alignLeft="@+id/textviewEmail"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
 </RelativeLayout>
