PostItem working in GAE!!!

--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -11,12 +11,20 @@
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1" />
+
+  <EditText
+      android:id="@+id/editText1"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:ems="10"
+      android:inputType="textEmailAddress" />
     	
   <Button
       android:id="@+id/regButton"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="0"
-      android:text="Register" />
+      android:text="Login" />
 
 </LinearLayout>
